Fixing layout problems

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -30,10 +30,14 @@ html {
     padding: 3em;
 }
 
-.single, .page {
+.single {
     .main-content-inner {
         padding: 0;
     }
+}
+
+.page-inner {
+    padding: 2em;
 }
 
 // Mobile view
@@ -44,10 +48,10 @@ html {
     }
 }
 
-// Desktop view
-@include media-breakpoint-up(lg) {
-}
-
 .post-comments {
     padding: 4em;
+}
+
+.results-headline {
+    padding-left: 2em;
 }
